PharmaDemo/src/objects/Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Types__c</fullName>
        <label>Customer Types</label>
        <picklist>
            <picklistValues>
                <fullName>GPs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Nurses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O &amp; G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialists</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>TEXT( Date_From__c ) &amp; &quot; : &quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitation_process__c</fullName>
        <label>Invitation process</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Linked_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Meeting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Meetings_Symposia</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Meeting</label>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <recordTypes>
        <fullName>ApprovedMeeting</fullName>
        <active>true</active>
        <description>Approved Meeting</description>
        <label>Approved Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Symposium</fullName>
        <active>true</active>
        <description>Large symposium type events</description>
        <label>Symposium</label>
    </recordTypes>
    <recordTypes>
        <fullName>UnapprovedMeeting</fullName>
        <active>true</active>
        <label>Unapproved Meeting</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>